# backend-service/openapi.yaml
@@ -1,156 +1,78 @@
-openapi: 3.0.3
+openapi: 3.0.0
 info:
-  title: Choreo Samples - Reading List - Python REST API
-  description: >-
-    This is a sample API specification for a simple reading list application with in-memory cache
-    written in Python.
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  version: 1.0.0
-externalDocs:
-  description: Choreo
-  url: https://choreo.dev
+  title: Tasks Backend API
+  description: Backend service for managing tasks.
+  version: "1.0"
 servers:
-  - url: http://localhost:5000
-tags:
-  - name: books
-    description: In-memory book list cache API
+  - url: http://localhost:8090
+    description: Development server
 paths:
-  /books:
-    summary: List all books
+  /get_mail:
     get:
-      summary: List all books
-      operationId: ListAllBooks
-      tags:
-        - books
+      summary: Get unique emails
+      description: Retrieves a list of unique email addresses associated with tasks.
       responses:
-        "200":
-          description: Successful operation
+        '200':
+          description: List of unique email addresses
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/StringArray"
-    post:
-      summary: Insert a new book
-      operationId: InstallNewBook
-      responses:
-        "200":
-          description: Successful operation
-        "400":
-          description: Invalid request body
-      tags:
-        - books
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/KeyValue"
-
-  /books/{id}:
-    summary: Get book by ID
+                type: array
+                items:
+                  type: string
+  /get_tasks/{email}:
     get:
-      tags:
-        - books
-      summary: Get book by ID
-      operationId: GetBookById
+      summary: Get tasks by email
+      description: Retrieves tasks associated with a specific email address.
       parameters:
-        - name: id
-          in: path
-          description: id of book to return
+        - in: path
+          name: email
           required: true
           schema:
             type: string
+            format: email
       responses:
-        "200":
-          description: Successful operation
+        '200':
+          description: List of tasks for the given email address
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/KeyValue"
-        "404":
-          description: id not found
-    delete:
-      tags:
-        - books
-      summary: Delete book by id
-      description: Deletes a single book based on the id supplied
-      operationId: DeleteBookById
-      parameters:
-        - name: id
-          in: path
-          description: id of book to delete
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: Successful operation
-        "404":
-          description: Id not found
-    put:
-      tags:
-        - books
-      summary: Update book status by id
-      description: Updates the status of the book based on the id supplied
-      operationId: UpdateBookStatusById
-      parameters:
-        - name: id
-          in: path
-          description: id of book to update
-          required: true
-          schema:
-            type: string
-      responses:
-        "200":
-          description: Successful operation
-        "404":
-          description: id not found
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Status"
-  /healthz:
-    summary: Healthcheck endpoint
+                type: array
+                items:
+                  type: object
+                  properties:
+                    task:
+                      type: string
+                    deadline:
+                      type: string
+                      format: date
+  /get_all_info:
     get:
-      summary: Healthcheck
-      operationId: Healthcheck
+      summary: Get all task information
+      description: Retrieves all task information including email, task, and deadline.
       responses:
-        "200":
-          description: Healthy response
-
+        '200':
+          description: List of all task information
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    email:
+                      type: string
+                    task:
+                      type: string
+                    deadline:
+                      type: string
+                      format: date
 components:
   schemas:
-    Key:
+    Error:
       type: object
       properties:
-        id:
+        message:
           type: string
-          example: "my-id"
-    Status:
-      type: object
-      properties:
-        status:
-          type: string
-          example: "read"
-    KeyValue:
-      type: object
-      required:
-        - name
-        - author
-        - status
-      properties:
-        name:
-          type: string
-          example: "my-name"
-        author:
-          type: string
-          example: "my-author"
-        status:
-          type: string
-          example: "read"
-    StringArray:
-      type: array
-      items:
-        type: string
+        code:
+          type: integer
